--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
         <a class="nav-link" href="file:///C:/Users/Adarsh/Desktop/HTML%20software/Websites/Responsive%20website/responsive.htmfile:///C:/Users/Adarsh/Desktop/HTML%20software/Websites/Responsive%20website/blog.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="file:///C:/Users/Adarsh/Desktop/HTML%20software/Websites/Responsive%20website/blog.html">Blog</a>
+        <a class="nav-link" href="https://adarshtechnical.github.io/adarshtechnicalbolg.github.io/">Blog</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
