--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="file:///C:/Users/Adarsh/Desktop/HTML%20software/Websites/Responsive%20website/responsive.htmfile:///C:/Users/Adarsh/Desktop/HTML%20software/Websites/Responsive%20website/blog.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://adarshtechnical.github.io/adarshtechno.github.io/.">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://adarshtechnical.github.io/adarshtechnicalbolg.github.io/">Blog</a>
