--- a/404.html
+++ b/404.html
@@ -101,7 +101,7 @@
 		<hr class="w-25 mx-auto pt-5">	
     <div class="row mb-5">
     	<div class="col-lg-6s col-md-6 col-12">
-    	<img src="images/logo.jpg" class="img-fluid pb-4" >	
+    	<img src="images/logo.png" class="img-fluid pb-4" >	
     	</div>
     	<div class="col-lg-6s col-md-6 col-12">
     		
