--- a/responsive.html
+++ b/responsive.html
@@ -171,8 +171,8 @@
 
 
   <div class="btn-group btn-group-lg  py-5 m-auto">
-  <button type="button" class="btn btn-light "><a href="" >Facebook</a> </button>
-  <button type="button" class="btn btn-light"><a href="">Instagram</a></button>
+  <button type="button" class="btn btn-light "><a href="https://www.facebook.com/adarshpratap.singh.1272010/" >Facebook</a> </button>
+  <button type="button" class="btn btn-light"><a href="https://www.instagram.com/adarrrrsh/?hl=en">Instagram</a></button>
 </div>
 </div>
 
